Revert "fixed: dark mode switch"
This reverts commit 7fc6b5d8b73ea23f85a8c277c678e844cbeaef1b.

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -15,8 +15,7 @@ $font-serif: $font-family;
   --code-bg: #f6f6f6;
 }
 
-body.is-dark,
-.is-dark {
+[data-theme="dark"] {
   --bg-color: #212529;
   --text-color: #ffffff;
   --subtext-color: #adb5bd;
